# toon-rs

./: .gitignore  Cargo.toml  DOC.md  README.md
examples/: basic.rs
pybinding/: Cargo.toml  README.md  example.py  pyproject.toml
pybinding/src/: lib.rs
src/: encoders.rs  lib.rs  normalize.rs  primitives.rs  types.rs  writer.rs
