[package]
name = "toon"
version = "0.1.0"
edition = "2021"
authors = ["Jad Jabbour <jad.jabbour@cryptoware.me>"]
description = "Token-Oriented Object Notation – a token-efficient JSON alternative for LLM prompts"
license = "MIT"
repository = "https://github.com/JadJabbour/toon-rs"
keywords = ["llm", "json", "serialization", "encoding"]
categories = ["encoding", "text-processing"]

[dependencies]
serde_json = "1.0"
regex = "1.10"
